asg/tests/fail/array/nested_3x2_value_fail.leo
// Multidimensional array syntax in leo
function main() {
    const a: [u32; (3, 2)] = [[0; 3]; 2]; // initializer (incorrectly reversed ordering)
}
